# nvim

./: .gitignore  .tmux.conf  init.lua  memo.md  todo.md
TCP_IP_learn/computer_transport_layer/: basic.md
TimerBackEnd/.cache/clangd/index/: main.cpp.1D3E44EFE6565F56.idx
TimerBackEnd/src/: CMakeLists.txt  beast.hpp  compile_commands.json  listener.hpp  main.cpp  net.hpp
TimerBackEnd/src/.cache/clangd/index/: main.cpp.1D3E44EFE6565F56.idx  net.hpp.275EBE0F9BACF92E.idx
TimerTechDesign/: 网络部分.md
after/plugin/: cmp.rc.lua  lspconfig.lua  lualine.rc.lua  nvim-treesitter.rc.lua  telescope.rc.lua
hello_cpp/src/: class_learn_advanced.md  class_learn_basic.md  multithreaded_programming_learn.md  shared_ptr_learn.md  unique_ptr_learn.md  weak_ptr_learn.md
lua/: highlighting.lua  lsp.lua  plugins.lua
plugin/: packer_compiled.lua
